still trying to fix scrolling on mobile

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -13,8 +13,7 @@ body {
   background-color: #fff;
   margin: 0px;
   padding: 0px;
-  overflow-x:hidden;
-  overflow-y:auto;
+
 }
 
 html {
@@ -22,7 +21,7 @@ html {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x:hidden;
+
 }
 
 h1,
